# threshold-oprf

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md
.github/workflows/: ci.yml
ceremony/: README.md  ceremony.env.example  ceremony.sh
config/: proxy-config.example.json
crates/core/: Cargo.toml
crates/core/src/: combine.rs  hash_to_curve.rs  lib.rs  partial_eval.rs  (+3 more)
crates/keygen/: Cargo.toml
crates/monitor/: Cargo.toml
crates/node/: Cargo.toml
crates/proxy/: Cargo.toml
crates/proxy/src/: attestation.rs  device_keys.rs  main.rs  nonce.rs  rate_limit.rs
crates/seal/: Cargo.toml
deploy/: Dockerfile.node  Dockerfile.proxy  README.md  config.env.example  deploy.sh  docker-compose.yml  nodes.json  nodes.json.example  provision.sh  replace-node.sh  setup-ecs.sh
deploy/nitro/: build-enclave.sh  enclave-config.json  nitro-enclave.Dockerfile
deploy/sev/: Dockerfile.sev
deploy/sgx/: Dockerfile.sgx
docker/: Dockerfile.node  Dockerfile.proxy  docker-compose.yml  proxy-config.json  proxy-config.production.json
docker/nitro/: build-enclave.sh  entrypoint.sh  nitro-enclave.Dockerfile
docker/sev/: Dockerfile.sev
docker/sgx/: Dockerfile.sgx  toprf-node.manifest.template
docs/: technical-overview.md  vm-provisioning.md
lambda/: config.env.example  deploy.sh  package-lock.json  package.json
lambda/handlers/: attest.ts  evaluate.ts
lambda/rotation/: handler.py  template.yaml
lambda/shared/: attestation.ts  dynamo-rate-limit.ts
scripts/: gen-certs.sh  integration-test.sh
scripts/deploy/: README.md  config.env.example  deploy.sh  setup-ecs.sh
(+13 files in other folders)
