[package]
name = "toprf-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
toprf-core = { path = "../core" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
k256 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
p256 = { workspace = true }
ciborium = { workspace = true }
x509-parser = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
pem = { workspace = true }
axum-server = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

[dev-dependencies]
tempfile = "3"
